--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,10 @@
 <mat-form-field appearance="standard">
   <mat-label>Filter Table</mat-label>
-  <input matInput placeholder="search" />
+  <input matInput placeholder="Search" (keyup)="applyFilter($event)" #input />
 </mat-form-field>
 
 <div>
   <table mat-table [dataSource]="dataSource" matSort>
-
 
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
@@ -17,12 +16,10 @@
       <td mat-cell *matCellDef="let row"> {{row.title}} </td>
     </ng-container>
 
-
     <ng-container matColumnDef="description">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> description </th>
       <td mat-cell *matCellDef="let row"> {{row.description}} </td>
     </ng-container>
-
 
     <ng-container matColumnDef="pageCount">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> pageCount </th>
@@ -31,6 +28,10 @@
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell" colspan="4">No search result for: "{{input.value}}"</td>
+    </tr>
   </table>
 
   <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of books"></mat-paginator>
