--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,6 +26,11 @@
       <td mat-cell *matCellDef="let row"> {{row.pageCount}} </td>
     </ng-container>
 
+    <ng-container matColumnDef="publishDate">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> publishDate </th>
+      <td mat-cell *matCellDef="let row"> {{row.publishDate | date}} </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
