feat: Add ng-chart template

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<app-chart></app-chart>
+
 <mat-form-field appearance="standard">
   <mat-label>Filter Table</mat-label>
   <input matInput placeholder="Search" (keyup)="applyFilter($event)" #input />
