--- a/src/app/chart/chart.component.css
+++ b/src/app/chart/chart.component.css
@@ -1,3 +1,9 @@
+.main__chart-wrapper {
+    padding-top: 2rem;
+    margin: 0 auto;
+    width: 90%;
+}
+
 .chartContainer {
     width: 500px;
     height: 500px;
