--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,43 +1,46 @@
-<mat-form-field appearance="standard">
-    <mat-label>Filter Table</mat-label>
-    <input matInput placeholder="Search" (keyup)="applyFilter($event)" #input />
-</mat-form-field>
+<section class="main__table-wrapper">
 
-<div>
-    <table id="excel-table" mat-table [dataSource]="dataSource" matSort>
+    <mat-form-field appearance="standard">
+        <mat-label>Filter Table</mat-label>
+        <input matInput placeholder="Search" (keyup)="applyFilter($event)" #input />
+    </mat-form-field>
 
-        <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-            <td mat-cell *matCellDef="let row"> {{row.id}} </td>
-        </ng-container>
+    <div>
+        <table id="excel-table" mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
-        <ng-container matColumnDef="title">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> title </th>
-            <td mat-cell *matCellDef="let row"> {{row.title}} </td>
-        </ng-container>
+            <ng-container matColumnDef="id">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+                <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+            </ng-container>
 
-        <ng-container matColumnDef="description">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> description </th>
-            <td mat-cell *matCellDef="let row"> {{row.description}} </td>
-        </ng-container>
+            <ng-container matColumnDef="title">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> title </th>
+                <td mat-cell *matCellDef="let row"> {{row.title}} </td>
+            </ng-container>
 
-        <ng-container matColumnDef="pageCount">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> pageCount </th>
-            <td mat-cell *matCellDef="let row"> {{row.pageCount}} </td>
-        </ng-container>
+            <ng-container matColumnDef="description">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> description </th>
+                <td mat-cell *matCellDef="let row"> {{row.description}} </td>
+            </ng-container>
 
-        <ng-container matColumnDef="publishDate">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> publishDate </th>
-            <td mat-cell *matCellDef="let row"> {{row.publishDate | date}} </td>
-        </ng-container>
+            <ng-container matColumnDef="pageCount">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> pageCount </th>
+                <td mat-cell *matCellDef="let row"> {{row.pageCount}} </td>
+            </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            <ng-container matColumnDef="publishDate">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> publishDate </th>
+                <td mat-cell *matCellDef="let row"> {{row.publishDate | date}} </td>
+            </ng-container>
 
-        <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="4">No search result for: "{{input.value}}"</td>
-        </tr>
-    </table>
-    <button (click)="exportexcel()">Export to Excel</button>
-    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of books"></mat-paginator>
-</div>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+            <tr class="mat-row" *matNoDataRow>
+                <td class="mat-cell" colspan="4">No search result for: "{{input.value}}"</td>
+            </tr>
+        </table>
+        <button mat-raised-button color="primary" (click)="exportexcel()">Export to Excel</button>
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of books"></mat-paginator>
+    </div>
+</section>
