--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,6 +1,6 @@
 <section class="main__table-wrapper">
   <mat-form-field appearance="standard">
-    <mat-label>Filter Table</mat-label>
+    <mat-label>Search...</mat-label>
     <input matInput placeholder="Search" (keyup)="applyFilter($event)" #input />
   </mat-form-field>
 
@@ -19,7 +19,9 @@
 
       <ng-container matColumnDef="title">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>title</th>
-        <td mat-cell *matCellDef="let row">{{ row.title }}</td>
+        <td mat-cell *matCellDef="let row">
+          {{ row.title }}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="description">
